# Miniscope-Wire-Free-DAQ

./: README.md
KiCad/Wire-Free-DAQ/: Deserializer.sch  MCU.sch  Power.sch  Wire-Free-DAQ-cache.lib  Wire-Free-DAQ-rescue.lib  Wire-Free-DAQ.kicad_pcb  Wire-Free-DAQ.pro  Wire-Free-DAQ.sch  Wire-Free-DAQ_Chang.kicad_pcb  sym-lib-table
KiCad/Wire-Free-DAQ/Output/: Wire-Free-DAQ-B_Cu.gbr  Wire-Free-DAQ-B_Mask.gbr  Wire-Free-DAQ-B_Paste.gbr  Wire-Free-DAQ-B_SilkS.gbr  Wire-Free-DAQ-Edge_Cuts.gbr  Wire-Free-DAQ-F_Cu.gbr  Wire-Free-DAQ-F_Mask.gbr  Wire-Free-DAQ-F_Paste.gbr  Wire-Free-DAQ-F_SilkS.gbr  Wire-Free-DAQ-In1_Cu.gbr  Wire-Free-DAQ-In2_Cu.gbr  Wire-Free-DAQ-In3_Cu.gbr  Wire-Free-DAQ-In4_Cu.gbr  Wire-Free-DAQ-NPTH.drl  Wire-Free-DAQ-PTH.drl  Wire-Free-DAQ-job.gbrjob
KiCad/Wire-Free-DAQ/bom/: ibom.html
KiCad/Wire-Free-DAQ/ibom/: ibom.html
MCU-firmware/Wire-Free-DAQ/: Wire-Free-DAQ.atsln
MCU-firmware/Wire-Free-DAQ/Wire-Free-DAQ/: Wire-Free-DAQ.cproj
MCU-firmware/Wire-Free-DAQ/Wire-Free-DAQ/src/: asf.h  definitions.h  image_sensor_interface.h  main.c  sd_card_interface.h  time_tick.h  time_tick_sam.c
MCU-firmware/Wire-Free-DAQ/Wire-Free-DAQ/src/ASF/common/boards/user_board/: init.c
MCU-firmware/Wire-Free-DAQ/Wire-Free-DAQ/src/config/: conf_board.h  conf_clock.h  conf_sd_mmc.h
Wire-Free-DAQ-Software/: .gitignore  Wire-Free-DAQ.ipynb  pyproject.toml
Wire-Free-DAQ-Software/notebooks/: grab_frames.ipynb
Wire-Free-DAQ-Software/tests/: test_formats.py  test_sdcard.py
Wire-Free-DAQ-Software/wire_free_daq/: formats.py  io.py  sdcard.py
