[tool.poetry]
name = "wire-free-daq"
version = "0.1.0"
description = ""
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
readme = "README.md"
packages = [{include = "wire_free_daq"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
numpy = "^1.25.0"
pydantic = "^1.10.9"
ipywidgets = "^8.0.6"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
